--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://naldorck01.github.io/helloworld-react-typescript",
+  "homepage": "https://naldorck01.github.io/helloworld-react-typescript",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -11,8 +11,10 @@
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-helmet": "^6.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
