--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://naldorck01.github.io/helloworld-react-typescript",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -9,8 +8,8 @@
     "@testing-library/user-event": "^12.8.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "^16.14.5",
+    "@types/react-dom": "^16.9.11",
     "@types/react-helmet": "^6.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -18,7 +17,21 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^0.2.4",
+    "workbox-background-sync": "^5.1.4",
+    "workbox-broadcast-update": "^5.1.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-core": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-google-analytics": "^5.1.4",
+    "workbox-navigation-preload": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-range-requests": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4",
+    "workbox-streams": "^5.1.4",
+    "react-app-rewire-alias": "^1.0.1",
+    "react-app-rewired": "^2.1.8"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -47,8 +60,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "react-app-rewire-alias": "^1.0.1",
-    "react-app-rewired": "^2.1.8"
+    "gh-pages": "^3.1.0"
   }
 }
